--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ serde = { version = "1.0.197", features = ["derive", "rc"] }
 serde_json = "1.0.114"
 serde_toml = "0.0.1"
 toml = "0.8.19"
+tracing = "0.1.40"
+log = "0.4.22"
+notion-client = "1.0.2"
